src/test/ui/consts/const-eval/heap/alloc_intrinsic_nontransient_fail.stderr
error: untyped pointers are not allowed in constant
  --> $DIR/alloc_intrinsic_nontransient_fail.rs:6:1
   |
LL | const FOO: *const i32 = foo();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

